# ratel

./: .cproject  .gitignore  .project  Makefile  README.md
Debug/: makefile  sources.mk
bot-client/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
dou-dizhu-agent/: .gitignore  README.md  pyproject.toml
dou-dizhu-agent/docs/: agent-play-optimization-log.md
dou-dizhu-agent/docs/superpowers/flows/: agent-workflow.md
dou-dizhu-agent/docs/superpowers/plans/: 2026-06-29-implementation-plan.md
dou-dizhu-agent/docs/superpowers/specs/: 2026-06-29-dou-dizhu-agent-design.md  2026-07-01-agent-play-latency-design.md
dou-dizhu-agent/scripts/: generate_flowcharts.py
dou-dizhu-agent/src/dou_dizhu_agent/: __main__.py  api.py  counter.py  models.py  rules.py  selector.py  strategy.py
dou-dizhu-agent/tests/: test_api.py  test_counter.py  test_games.py  test_models.py  test_rules.py  test_selector.py  test_strategy.py
landlords-client/: Makefile  SimpleClient  SimpleClient.cc  SimpleClient.h  client  client.cc  clinet_test  clinet_test.cc  core  main.cc  server  startclient.sh  user.h
landlords-common/: common.mk
landlords-server/: .test.cc.swp  Makefile  core  server  server.cc  start_server.sh  startserver.sh
llm-agent/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
test/: PokerBasic.h  a.out  test1.cc  test2  test2.cc  test3  test3.cc  test4  test4.cc  test5.cc  test_json  test_json.cc  test_serialize_pokers  test_serialize_pokers.cc  test_set_vector  test_set_vector.cc
web/: .env.example  README.md  (+7 more)
(+214 files in other folders)
