[project]
name = "dou-dizhu-agent"
version = "0.1.0"
description = "A dou-dizhu AI agent that plays as one player"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "langchain",
    "langchain-openai>=0.1.0",
    "pytest",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dou_dizhu_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "matplotlib>=3.11.0",
]
